# CPP-Game-Engine

./: CMakeLists.txt  README.md
assets/shaders/: Test.txt  defaultFrag.glsl  defaultVert.glsl
include/: core.h
include/engine/: Engine.h  UserInputs.h  Window.h  window.h
include/render/: Shader.h  Texture.h
include/scenes/: MainScene.h  Scene.h
include/util/: Color.h
scratchFiles/: scratch.cpp
src/: main.cpp
src/engine/: Engine.cpp  UserInputs.cpp  Window.cpp  window.cpp
src/render/: Shader.cpp  Texture.cpp
src/scenes/: MainScene.cpp  Scene.cpp
src/util/: Color.cpp
testFIles/: Test.cpp
